--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,9 +13,10 @@
     <dimen name="cardview_elevation">4dp</dimen>
 
     <dimen name="toolbar_elevation">4dp</dimen>
-    <dimen name="text_size_large">22sp</dimen>
     <dimen name="text_size_medium">16sp</dimen>
     <dimen name="text_size_small">14sp</dimen>
+    <dimen name="text_size_title">20sp</dimen>
+    <dimen name="text_size_subtitle">14sp</dimen>
 
     <dimen name="flexible_space_image_height">280dp</dimen>
     <dimen name="intersection_height">16dp</dimen>
