--- a/app/src/main/res/layout/fragment_artist_list.xml
+++ b/app/src/main/res/layout/fragment_artist_list.xml
@@ -1,28 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingTop="@dimen/activity_vertical_margin">
 
-    <kyleparker.example.com.p1spotifystreamer.ui.widget.FloatLabelLayout
-        app:floatLabelTextAppearance="@style/TextAppearance.AppTheme.FloatLabel"
+    <!--<kyleparker.example.com.p1spotifystreamer.ui.widget.FloatLabelLayout-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
+    <!--app:floatLabelTextAppearance="@style/TextAppearance.AppTheme.FloatLabel">-->
+
+    <android.support.v7.widget.SearchView
+        android:id="@+id/edit_search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/activity_vertical_margin">
+        android:layout_gravity="center" />
 
-        <EditText
-            android:id="@+id/edit_search"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/content_search"
-            android:imeOptions="actionSearch"
-            android:inputType="none"
-            android:singleLine="true" />
+    <!--<EditText-->
+    <!--android:id="@+id/edit_search"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:hint="@string/content_search"-->
+    <!--android:imeOptions="actionSearch"-->
+    <!--android:inputType="none"-->
+    <!--android:singleLine="true" />-->
 
-    </kyleparker.example.com.p1spotifystreamer.ui.widget.FloatLabelLayout>
+    <!--</kyleparker.example.com.p1spotifystreamer.ui.widget.FloatLabelLayout>-->
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/artist_list"
